--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/images/favicon_package_v0.16/apple-touch-icon.png"> -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon_package_v0.16/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/images/favicon_package_v0.16/favicon-16x16.png">
-  <!-- <link rel="manifest" href="./src/assets/images/favicon_package_v0.16/site.webmanifest"> -->
-  <link rel="mask-icon" href="./src/assets/images/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
-  <!-- <meta name="msapplication-TileColor" content="#da532c"> -->
-  <!-- <meta name="theme-color" content="#ffffff"> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon_package_v0.16/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_package_v0.16/favicon-16x16.png">
+  <link rel="mask-icon" href="/assets/images/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JDX - Collabrative Online Compiler</title>
 </head>
